[package]
name = "visualize-sqlite"
version = "1.1.0"
edition = "2018"
description = "A simple way to draw a diagram from an sqlite database"
license = "MIT"
readme = "ReadMe.md"
repository = "https://github.com/PaulAvery/visualize-sqlite"
keywords = ["sqlite", "graphviz", "dot", "svg"]

[dependencies]
diesel = { version = "1.4.7", features = [ "sqlite" ] }
eyre = { version = "0.6.5" }